Renomeando o arquivo das imagens

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
             </ul>
             <p><h1>Projeto Sonic Rover</h1></p>
-            <img class="img1" src="/css/lista_img/sonic rover.jpg" alt="sonic rover.jpg">
+            <img class="img1" src="css/img/sonic rover.jpg" alt="sonic rover.jpg">
         </nav>
     </header>
     <p><h2>Nós somos a Kjager Team e temos como projeto o Sonic Rover. Estamos participando da 3º edição do Campeonato Barsileiro de Véiculos Autônomos em Escala.</h2></p>
