--- a/montagem.html
+++ b/montagem.html
@@ -12,9 +12,9 @@
         <table>
             <tr>
                 <div id="imgs" class="container">
-                    <td><img class="img1" src="/css/lista_img/carrinho-site.png" alt="carrinho-site.png">
+                    <td><img class="img1" src="css/img/carrinho-site.png" alt="carrinho-site.png">
                     <p1>imagem ilustrativa, retirada do site: <a href="https://pt.aliexpress.com/item/1005005949127058.html?src=google&pdp_npi=4%40dis%21BRL%21505.61%21308.82%21%21%21%21%21%40%2112000034984229010%21ppc%21%21%21&src=google&albch=shopping&acnt=768-202-3196&isdl=y&slnk=&plac=&mtctp=&albbt=Google_7_shopping&aff_platform=google&aff_short_key=UneMJZVf&gclsrc=aw.ds&&albagn=888888&&ds_e_adid=&ds_e_matchtype=&ds_e_device=c&ds_e_network=x&ds_e_product_group_id=&ds_e_product_id=pt1005005949127058&ds_e_product_merchant_id=5075566504&ds_e_product_country=BR&ds_e_product_language=pt&ds_e_product_channel=online&ds_e_product_store_id=&ds_url_v=2&albcp=21106536414&albag=&isSmbAutoCall=false&needSmbHouyi=false&gad_source=1&gclid=CjwKCAiA9IC6BhA3EiwAsbltOHMoRUgdGreQbS8E1_ccj9QyKSSPzdxIdIp-WfTAdAT_nm2o5pTlMBoCv3gQAvD_BwE">carrinho aliexpress</a></p1></td>
-                    <td><img class="img2" src="/css/lista_img/carrinho_materiais-site.png" alt="carrinho_materiais-site.png">
+                    <td><img class="img2" src="css/img/carrinho_materiais-site.png" alt="carrinho_materiais-site.png">
                     <p1>imagem ilustrativa, retirada do site: <a href="https://pt.aliexpress.com/item/1005005949127058.html?src=google&pdp_npi=4%40dis%21BRL%21505.61%21308.82%21%21%21%21%21%40%2112000034984229010%21ppc%21%21%21&src=google&albch=shopping&acnt=768-202-3196&isdl=y&slnk=&plac=&mtctp=&albbt=Google_7_shopping&aff_platform=google&aff_short_key=UneMJZVf&gclsrc=aw.ds&&albagn=888888&&ds_e_adid=&ds_e_matchtype=&ds_e_device=c&ds_e_network=x&ds_e_product_group_id=&ds_e_product_id=pt1005005949127058&ds_e_product_merchant_id=5075566504&ds_e_product_country=BR&ds_e_product_language=pt&ds_e_product_channel=online&ds_e_product_store_id=&ds_url_v=2&albcp=21106536414&albag=&isSmbAutoCall=false&needSmbHouyi=false&gad_source=1&gclid=CjwKCAiA9IC6BhA3EiwAsbltOHMoRUgdGreQbS8E1_ccj9QyKSSPzdxIdIp-WfTAdAT_nm2o5pTlMBoCv3gQAvD_BwE">materiais-carrinho aliexpress</a></p1></td>
                 </div>
             </tr>
