--- a/sobre.html
+++ b/sobre.html
@@ -6,7 +6,7 @@
     <title>Sobre o projeto</title>
     <link rel="stylesheet" href="./css/layout/sobre.css">
 </head>
-<h1>Sonic Rover</h1><img class="sonic_img" src="/css/lista_img/sonic.jpg" alt="sonic.jpg">
+<h1>Sonic Rover</h1><img class="sonic_img" src="css/img/sonic.jpg" alt="sonic.jpg">
 <body>
     <div class="text-container">
         <div class="letter">K</div>
